test/types/records/init/copy/copyWithRefOther.good
copyWithRefOther.chpl:16: error: non-lvalue actual is passed to 'ref' formal 'src' of init()
